WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70482
DFG-related stubs in the old JIT should not be built if the DFG is disabled
https://bugs.webkit.org/show_bug.cgi?id=70482
Summary
DFG-related stubs in the old JIT should not be built if the DFG is disabled
Filip Pizlo
Reported
2011-10-20 01:36:56 PDT
patch forthcoming
Attachments
the patch
(2.36 KB, patch)
2011-10-20 01:42 PDT
,
Filip Pizlo
zherczeg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-10-20 01:42:02 PDT
Created
attachment 111740
[details]
the patch
Zoltan Herczeg
Comment 2
2011-10-20 01:44:48 PDT
Comment on
attachment 111740
[details]
the patch r=me
Filip Pizlo
Comment 3
2011-10-20 02:09:21 PDT
Landed in
http://trac.webkit.org/changeset/97951
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug