https://bugs.webkit.org/show_bug.cgi?id=70482 DFG-related stubs in the old JIT should not be built if the DFG is disabled

Reviewed by Zoltan Herczeg.

Aiming for a slight code size/build time reduction if the DFG is not in
play. This should also make further DFG development slightly easier since
the bodies of these JIT stubs can now safely refer to things that are only
declared when the DFG is enabled.

* jit/JITStubs.cpp:
* jit/JITStubs.h:



Canonical link: https://commits.webkit.org/86666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97951 268f45cc-cd09-0410-ab3c-d52691b4dbfc