Source/JavaScriptCore/jit/JITStubs.h
@@ -425,8 +425,10 @@ extern "C" {
     void JIT_STUB cti_op_tear_off_activation(STUB_ARGS_DECLARATION);
     void JIT_STUB cti_op_tear_off_arguments(STUB_ARGS_DECLARATION);
     void JIT_STUB cti_op_throw_reference_error(STUB_ARGS_DECLARATION);
+#if ENABLE(DFG_JIT)
     void JIT_STUB cti_optimize_from_loop(STUB_ARGS_DECLARATION);
     void JIT_STUB cti_optimize_from_ret(STUB_ARGS_DECLARATION);
+#endif
     void* JIT_STUB cti_op_call_arityCheck(STUB_ARGS_DECLARATION);
     void* JIT_STUB cti_op_construct_arityCheck(STUB_ARGS_DECLARATION);
     void* JIT_STUB cti_op_call_jitCompile(STUB_ARGS_DECLARATION);
